--- a/apps/medium-clone/src/app/auth/components/register/register.component.html
+++ b/apps/medium-clone/src/app/auth/components/register/register.component.html
@@ -23,8 +23,9 @@
 					<fieldset class="form-group">
 						<input
 							formControlName="email"
+							autocomplete="email"
 							class="form-control form-control-lg"
-							type="text"
+							type="email"
 							placeholder="Email"
 						/>
 					</fieldset>
@@ -33,10 +34,17 @@
 							formControlName="password"
 							class="form-control form-control-lg"
 							type="password"
+							autocomplete="current-password"
 							placeholder="Password"
 						/>
 					</fieldset>
-					<button class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
+					<button
+						class="btn btn-lg btn-primary pull-xs-right"
+						type="submit"
+						[disabled]="isSubmitting$ | async"
+					>
+						Sign up
+					</button>
 				</form>
 			</div>
 		</div>
