--- a/apps/medium-clone/src/app/auth/components/register/register.component.html
+++ b/apps/medium-clone/src/app/auth/components/register/register.component.html
@@ -6,11 +6,10 @@
 				<p class="text-xs-center">
 					<a [routerLink]="['/login']">Have an account?</a>
 				</p>
-
-				<ul class="error-messages">
-					<li>That email is already taken</li>
-				</ul>
-
+				<mc-backend-errors-messages
+					*ngIf="backendErrors$ | async as errors"
+					[backendErrors]="errors"
+				></mc-backend-errors-messages>
 				<form [formGroup]="form" (ngSubmit)="onSubmit()">
 					<fieldset class="form-group">
 						<input
